--- a/app_server/views/error.hbs
+++ b/app_server/views/error.hbs
@@ -1,2 +1,23 @@
-<h1>{{title}}</h1>
-<p>{{error}}</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>{{title}}</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+        <link href="/public/styles/style.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <div class="page_404">
+            <h1>{{title}}</h1>
+            
+            <div class="text">
+                <p>{{error}}</p>
+
+                <a href="forum.html">Pojdi domov</a>
+            </div>
+            
+            <img src="/public/images/404.gif" alt="404">
+        </div>
+    </body>
+</html>
