--- a/app_server/views/layout.hbs
+++ b/app_server/views/layout.hbs
@@ -31,20 +31,20 @@
     <div class="mobile_menu">
         <b>Novice</b>
         <ul>
-            <li><a href="poslji-novico.html"><i class="fas fa-folder-plus"></i> Pošlji novico</a></li>
-            <li><a href="arhiv-novic.html"><i class="fas fa-folder-open"></i> Arhiv novic</a></li>
+            <li><a href="/posljiNovico"><i class="fas fa-folder-plus"></i> Pošlji novico</a></li>
+            <li><a href="/arhivNovic"><i class="fas fa-folder-open"></i> Arhiv novic</a></li>
         </ul>
         <b>Forum</b>
         <ul>
             <li><i class="fab fa-wpforms"></i><a href="forum.html">Forum</a></li>
             <li><i class="fas fa-history"></i> <a href="teme-zadnjih-24-ur.html">Teme zadnjih 24 ur</a></li>
-            <li><i class="fas fa-ad"></i> <a href="mali-oglasi.html">Mali oglasi</a></li>
+            <li><i class="fas fa-ad"></i> <a href="/maliOglasi.html">Mali oglasi</a></li>
         </ul>
         <b>Ostalo</b>
         <ul>
             <li><i class="fas fa-align-left"></i> <a href="pravila.html">Pravila</a></li>
             <li><i class="fas fa-at"></i> <a href="kontakt.html">Kontakt</a></li>
-            <li><i class="fas fa-unlock"></i> <a href="pozabljeno-geslo.html">Pozabljeno geslo</a></li>
+            <li><i class="fas fa-unlock"></i> <a href="/pozabljenoGeslo">Pozabljeno geslo</a></li>
             <li><i class="fas fa-user-plus"></i> <a href="/registracija">Registracija</a></li>
         </ul>
     </div>
